Removed unnecessary style

--- a/Domaći/D_01_6502_Jovana_Apostolović/index.html
+++ b/Domaći/D_01_6502_Jovana_Apostolović/index.html
@@ -49,7 +49,7 @@
                     <li>Sobnog cveća</li>
                     <li style="background-color: transparent;">Začinskog bilja</li>
                     <li>Sukulenata</li>
-                    <li style="background-color: transparent;">Kaktusa</li>                
+                    <li>Kaktusa</li>                
                 </ul>
             </li>
             <li>Kuvanje</li>
