--- a/04_CSS_Box_model/index.html
+++ b/04_CSS_Box_model/index.html
@@ -23,6 +23,25 @@
             background-color: rebeccapurple;
             
         }
+
+        span {
+            box-sizing: border-box;
+            border: 8px solid black;
+            padding: 5px;
+            width: 50%;
+            height: 250px;
+            display: inline-block;
+            margin: 0;
+
+        }   
+
+        body {
+            margin: 0;
+            padding: 0;
+        }
+        * {
+            box-sizing: border-box;
+        }
     </style>
 </head>
 <body>
@@ -32,7 +51,7 @@
     <p>
         Tekst drugog paragrafa
     </p>
-    <span>tekst prvog spana</span>
+    <span>tekst prvog spana</span><span>tekst drugog spana</span>
     
 </body>
 </html>
