--- a/06_Responsive/3_Vežba/index.html
+++ b/06_Responsive/3_Vežba/index.html
@@ -39,9 +39,15 @@
     </div>
 
     <div class="row">
-        <section><img src="/06_Responsive/Slike/slika1.jpg" alt="priroda1" class="col-4"></section>
-        <section><img src="/06_Responsive/Slike/slika2.jpg" alt="priroda2" class="col-4"><img src="/06_Responsive/Slike/slika3.jpg" alt="priroda3" class="col-4"></section>
-        <section></section>
+        <section>
+            <img src="/06_Responsive/Slike/slika1.jpg" alt="priroda1" class="col-4">
+        </section>
+        <section>
+            <img src="/06_Responsive/Slike/slika2.jpg" alt="priroda2" class="col-4">
+        </section>
+        <section>
+            <img src="/06_Responsive/Slike/slika3.jpg" alt="priroda3" class="col-4">
+        </section>
 
     </div>
 
