--- a/07_Java_Script_Uvod/index.html
+++ b/07_Java_Script_Uvod/index.html
@@ -31,7 +31,35 @@
         console.log('It\'s alright');
         console.log(true);
         console.log(false);
-    </script>
+
+        let x; // deklaracija vrednosti
+        console.log(x); // undefined
+        x = 3; // dodela vrednosti
+        console.log(x);
+        x = "Stefan";
+        console.log(x);
+
+        let y = false;
+        console.log(y);
+        y = x;
+        console.log(x, y); // x="Stefan", y="Stefan"
+        x = "Jelena";
+        console.log(x, y); // x="Jelena", y="Stefan"
+
+        const z = 0; // mora se deklarisati i dodeliti vrednost u istoj liniji
+        console.log(z);
+        y = 6 + z;
+        console.log(y); // y = 6
+
+        let age;
+        console.log(age, age + 3); // undefined NaN (not a number)
+
+        let age2 = null;
+        console.log(age2, age2 + 3, age2 + "Pera"); // null 3 'nullPera'
+
+        </script>
+
+        <script src="script.js"></script>
     
 </body>
 </html>
