--- a/14_Callback_Foreach/index.html
+++ b/14_Callback_Foreach/index.html
@@ -5,16 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        #d1 {
-            background-color: antiquewhite;
-        }
-    </style>
 </head>
 <body>
-    <div id = "d1" ></div>
-    <div id = "d2" ></div>
-    <div id = "d3" ></div>
-    <script src="script.js"></script>
+    
+    <script src="script2.js"></script>
 </body>
 </html>
