--- a/Domaci/D_09_6502_Jovana_Apostolović/index.html
+++ b/Domaci/D_09_6502_Jovana_Apostolović/index.html
@@ -4,17 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        #d1 {
-            background-color: antiquewhite;
-        }
-    </style>
+    <title>Domaci broj 9</title>
 </head>
 <body>
-    <div id = "d1" ></div>
-    <div id = "d2" ></div>
-    <div id = "d3" ></div>
+    <div id="d1"></div>
+    <div id="d2"></div>
+    <div id="d3"></div>
     <script src="script.js"></script>
 </body>
 </html>
