još zamrzavanje samo

--- a/Kviz/index.html
+++ b/Kviz/index.html
@@ -8,6 +8,6 @@
 </head>
 <body style="background-color: cornsilk;">
     
-    <script src="script.js"></script>
+    <script src="script1.js"></script>
 </body>
 </html>
