dopuna zaključno sa vežbanjem promisa

--- a/19_Moduli/index.html
+++ b/19_Moduli/index.html
@@ -7,8 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-   
-
-    <script src="script.js"></script>
+    <!-- Modul je dodatni js fajl sa dodatnim svojstvima -->
+    <script type="module" src="script.js"></script>
 </body>
 </html>
