--- a/20_Klase/film/index.html
+++ b/20_Klase/film/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Film</title>
 </head>
 <body>
-   
-
-    <script src="script.js"></script>
+    <script type="module" src="script1.js"></script>
 </body>
 </html>
