--- a/Zadaci/index.html
+++ b/Zadaci/index.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-   
-
-    <script src="script.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
