--- a/Projekat_Chat/index.html
+++ b/Projekat_Chat/index.html
@@ -60,6 +60,6 @@
    </script>
 
     </script>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
