Projekat_Chat_Task4 i 5

--- a/Projekat_Chat/index.html
+++ b/Projekat_Chat/index.html
@@ -23,7 +23,7 @@
     </nav>
 
     <section class="row">
-        <ul>
+        <ul id="messDisp">
 
         </ul>
     </section>
@@ -58,6 +58,6 @@
    </script>
 
     </script>
-    <script type="module" src="script.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
