Projekat_Chat_Promena korisničkog imena

--- a/06_Responsive/3_Vežba/index.html
+++ b/06_Responsive/3_Vežba/index.html
@@ -22,7 +22,7 @@
             <ul>
                 <li><i class="fa fa-leaf"></i><a href="#">Biljke</a></li>
                 <li><i class="fa fa-paw"></i><a href="#">Životinje</a></li>
-                <li><i class="fa fa-image"></i><a href="">Pejzaži</a></li>
+                <li><i class="fa fa-image"></i><a href="#">Pejzaži</a></li>
             </ul>
         
         </nav>
