Projekat_Chats_ Domaći

--- a/Projekat_Chat/index.html
+++ b/Projekat_Chat/index.html
@@ -15,7 +15,7 @@
         </header>
     </div>
 
-    <nav class="topbar row">
+    <nav id="topbar" class="row">
         <button id="btnGeneral" class="btn col-3 col-t-12">#general</button>
         <button id="btnJs" class="btn col-3 col-t-12">#js</button>
         <button id="btnHomework" class="btn col-3 col-t-12">#homework</button>
@@ -30,7 +30,7 @@
 
     <div class="row">
         <form action="" id="formMessage" class="col-12 col-t-12">
-            <input id="inputMessage" class="" type="text" placeholder="Your message..">
+            <input id="inputMessage" class="" type="text" placeholder="Your message...">
             <input id="btnSend" class="btn" type="submit" value="Send"> 
         </form>
     </div>
@@ -41,6 +41,10 @@
             <input id="btnUpdate" class="btn" type="submit" value="Update">
         </form>
     </div>
+
+    <footer>
+        
+    </footer>
     
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
